--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,8 @@
 spring:
-  config:
-    activate:
-      on-profile: local
+  profiles:
+    active: local
+
+spring.batch.job.names: ${job.name:NONE}
 ---
 spring:
   profiles: local
