--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,17 +1,33 @@
 spring:
   profiles:
     active: local
+  batch:
+    job:
+      names: ${job.name:NONE}
 
-spring.batch.job.names: ${job.name:NONE}
+logging.level.org.springframework.batch: DEBUG
+logging:
+  level: INFO
 ---
+
 spring:
   profiles: local
   datasource:
     hikari:
-      jdbc-url: jdbc:h2:mem:testdb;
+      jdbc-url: jdbc:h2:mem:demo;
       username: sa
       password:
       driver-class-name: org.h2.Driver
+  h2:
+    console:
+      enabled: true
+      path: /h2-console
+  jpa:
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.MySQL5InnoDBDialect
+        format_sql: true
+        show-sql: true
 ---
 spring:
   profiles: mysql
@@ -20,9 +36,9 @@ spring:
       jdbc-url: jdbc:mysql://localhost:3306/spring_batch
       username: root
       password: mysql
-      driver-class-name: com.mysql.jdbc.Driver
+      driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
     properties:
       hibernate:
         format_sql: true
-    show-sql: true
+        show-sql: true
