--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -25,9 +25,8 @@ spring:
   jpa:
     properties:
       hibernate:
-        dialect: org.hibernate.dialect.MySQL5InnoDBDialect
         format_sql: true
-        shoq_sql: true
+        show_sql: true
 ---
 spring:
   profiles: mysql
